# Digital-Twin

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  genSln.bat  openSln.bat
Digital-Twin/: CMakeLists.txt  Config.hpp  Types.hpp
Digital-Twin-Python/: CMakeLists.txt  bindings.cpp
Digital-Twin/Core/: Simulation.cpp  Simulation.hpp
Sandbox/: CMakeLists.txt  main.cpp
Sandbox-Python/: DigitalTwin  main.py
apps/Gaudi/: CMakeLists.txt  Editor.cpp  Editor.h  EditorSelection.h  main.cpp
apps/Gaudi/demos/: AngiogenesisDemo.cpp  BranchingTreeDemo.cpp  BrownianMotionDemo.cpp  CellCycleDemo.cpp  CellMechanicsZooDemo.cpp  ChemotaxisDemo.cpp  ConsumeDemo.cpp  CurvedTubeDemo.cpp  Demos.h  DesignedVesselDemo.cpp  DiffusionDecayDemo.cpp  EC2DMatrigelDemo.cpp  ECBlobDemo.cpp  ECContactDemo.cpp  ECTubeDemo.cpp  EmptyBlueprint.cpp  EndothelialTubeDemo.cpp  JKRPackingDemo.cpp  LifecycleDemo.cpp  PuzzlePiecePaletteDemo.cpp  SecreteDemo.cpp  SimpleVesselDebugDemo.cpp  StaticVesselTreeDemo.cpp  StraightTubeDemo.cpp  StressTestDemo.cpp  TaperingTubeDemo.cpp  TissueSortingDemo.cpp  TwoShapeDemo.cpp  VesselSproutingDemo.cpp
apps/Gaudi/panels/: ConsolePanel.cpp  ConsolePanel.h  EditorPanel.h  EnvironmentPanel.cpp  EnvironmentPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  RenderSettingsPanel.cpp  RenderSettingsPanel.h  SimulationControlsPanel.cpp  SimulationControlsPanel.h  ViewportPanel.cpp  ViewportPanel.h
assets/: default_imgui.ini
assets/shaders/compute/: bitonic_sort.comp  brownian.comp  build_neighbor_list.comp  build_offsets.comp  cadherin_expression_update.comp  chemotaxis.comp  diffusion.comp  field_interaction.comp  hash_agents.comp  jkr_forces.comp  move_cells.comp  polarity_update.comp  solve_collisions.comp  voronoi_cell_polygon.comp
assets/shaders/compute/biology/: anastomosis.comp  mitosis_append.comp  mitosis_vessel_append.comp  notch_dll4.comp  perfusion.comp  phalanx_activation.comp  update_phenotype.comp  vessel_components.comp  vessel_mechanics.comp
assets/shaders/graphics/: build_indirect.comp  cell.frag  cell.vert  debug_markers.frag  debug_markers.vert  debug_vectors.frag  debug_vectors.vert  geometry.frag  geometry.vert  grid_overlay.frag  grid_overlay.vert  vessel_lines.vert  voronoi_fan.frag  voronoi_fan.vert
cmake/: CompilerSettings.cmake  GroupFiles.cmake
include/: DigitalTwin.h  DigitalTwinTypes.h
include/core/: Core.h  FileSystem.h  Handle.h  Log.h  Timer.h
include/platform/: Input.h  KeyCodes.h  MouseCodes.h  Window.h
include/simulation/: AgentGroup.h  Behaviours.h  BiologyGenerator.h  BiomechanicsGenerator.h  GridField.h  MorphologyGenerator.h  Phenotype.h  SimulationBlueprint.h  SimulationTypes.h  SimulationValidator.h  SpatialDistribution.h  VesselTreeGenerator.h
scripts/: fetch_dependencies.py  merge_project.bat
src/: CMakeLists.txt  DigitalTwin.cpp  SetupHelpers.cpp  SetupHelpers.h
src/app/: Simulation.cpp  Simulation.hpp
src/compute/: CMakeLists.txt  ComputeEngine.cpp  ComputeEngine.hpp  ComputeGraph.cpp  ComputeGraph.h  ComputeGraph.hpp  ComputeKernel.cpp  ComputeKernel.hpp  ComputeTask.cpp  ComputeTask.h  GraphDispatcher.cpp  GraphDispatcher.h
src/core/: Base.hpp  CMakeLists.txt  FileSystem.cpp  FileSystem.hpp  Log.cpp  Log.hpp  TimeController.hpp  Timer.cpp  Timer.hpp
src/core/jobs/: JobSystem.cpp  JobSystem.h
src/core/memory/: Memory.h  MemorySystem.cpp  MemorySystem.h  SystemAllocator.cpp  SystemAllocator.h
src/platform/: CMakeLists.txt  Input.cpp  Input.hpp  KeyCodes.hpp  PlatformSystem.cpp  PlatformSystem.h  Window.cpp  Window.hpp
src/python/: bindings.cpp
src/renderer/: AgentRenderPass.cpp  AgentRenderPass.hpp  CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  RenderContext.cpp  RenderContext.hpp  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Renderer.hpp  Scene.h  Scene.hpp  SimulationPass.cpp  SimulationPass.hpp
src/renderer/passes/: BuildIndirectPass.cpp  BuildIndirectPass.h  GeometryPass.cpp  GeometryPass.h  GridVisualizationPass.cpp  GridVisualizationPass.h  VesselVisualizationPass.cpp  VesselVisualizationPass.h
src/resources/: CMakeLists.txt  GPUMesh.hpp  Handle.h  Mesh.hpp  ResourceManager.cpp  ResourceManager.h  ResourceManager.hpp  ResourcePool.h  ShapeGenerator.cpp  ShapeGenerator.hpp  StreamingManager.cpp  StreamingManager.h  StreamingManager.hpp
src/rhi/: BindingGroup.cpp  BindingGroup.h  BindingGroup.hpp  Buffer.cpp  Buffer.h  Buffer.hpp  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  CommandQueue.cpp  CommandQueue.hpp  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorAllocator.hpp  Device.cpp  Device.h  Device.hpp  GPUProfiler.cpp  GPUProfiler.h  Pipeline.cpp  Pipeline.h  Pipeline.hpp  Queue.cpp  Queue.h  Queue.hpp  RHI.cpp  RHI.h  RHI.hpp  RHITypes.h  Sampler.cpp  Sampler.h  Sampler.hpp  Shader.cpp  Shader.h  Shader.hpp  Swapchain.cpp  Swapchain.h  (+7 more)
src/runtime/: Application.cpp  Application.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  EntryPoint.hpp
src/simulation/: CMakeLists.txt  MorphologyGenerator.cpp  Simulation.cpp  Simulation.hpp  SimulationBuilder.cpp  SimulationBuilder.h  SimulationContext.cpp  SimulationContext.hpp  SimulationScheduler.cpp  SimulationScheduler.hpp  SimulationState.h  SimulationValidator.cpp  SpatialDistribution.cpp  SystemBindings.hpp  Types.hpp  VesselTreeGenerator.cpp
src/streaming/: CMakeLists.txt  StreamingManager.cpp
tests/: CMakeLists.txt  ComputeTests.cpp  DataGenerationTests.cpp  FileSystemTests.cpp  JobSystemTests.cpp  MemoryTests.cpp  PlatformTests.cpp  RHITests.cpp  RendererTests.cpp  ResourceTests.cpp  ResourcesTests.cpp  RuntimeTests.cpp  SimulationTests.cpp  SimulationValidatorTests.cpp  StreamingTests.cpp  main.cpp
